--- a/landing-page.css
+++ b/landing-page.css
@@ -1,6 +1,7 @@
 body{
 	margin:0px;
 }
+@media only screen and (min-width:768px){
 .site{
 	display:grid;
 	place-items:center;
@@ -220,8 +221,9 @@ a{
 	text-decoration:none;
 	color:white;
 }
+}
 
-@media only screen and (max-width:600px){
+@media only screen and (max-width:460px){
 	.site{
 		height:200vh;
 		display:grid;
